Pictures and quote fixed with spacing
!ticket

--- a/src/app/main/containers/page/page.component.css
+++ b/src/app/main/containers/page/page.component.css
@@ -5,7 +5,7 @@
   height: 100vh;
   position: absolute;
   top: 0px;
-  padding: 5rem;
+  padding: 2.5rem;
 }
 
 .background {
